--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +35,36 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* New CSS Here */
+
+.nav-layout {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.nav-bar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 70%;
+}
+
+.movie-layout {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.movie-sidebar {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.movie-content {
+	flex: 2;
 }
