--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,19 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	margin: 10px;
 }
+
+a {
+	color: white
+}
+
 .movie-content {
 	flex: 2;
+}
+
+.movie-list-card {
+	border: 1px solid white;
+	margin: 10px;
+	padding: 20px;
 }
