--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -67,16 +67,21 @@
 	margin: 10px;
 }
 
-a {
-	color: white
-}
-
 .movie-content {
 	flex: 2;
+}
+
+.movie-list {
+	overflow-y: scroll;
+	max-height: 80vh;
+}
+
+a {
+	color: white
 }
 
 .movie-list-card {
 	border: 1px solid white;
 	margin: 10px;
 	padding: 20px;
-}
+} 
